--- a/Languages/default-fi.xml
+++ b/Languages/default-fi.xml
@@ -1289,6 +1289,7 @@
 				<item id="ID_LIBRARY_MOVE" text="_Siirrä Tiedostoja..."/>
 				<item id="ID_LIBRARY_COPY" text="_Kopioi Tiedostoja..."/>
 			</menu>
+			<item id="ID_LIBRARY_FILE_REBUILD" text="Ra_kenna Uudelleen"/>
 			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Paikallista Metadata"/>
 			<item id="ID_LIBRARY_REFRESH_METADATA" text="_Refresh Metadata"/>
 			<separator/>
@@ -1364,6 +1365,7 @@
 				<item id="ID_LIBRARY_MOVE" text="_Siirrä Tiedostoja..."/>
 				<item id="ID_LIBRARY_COPY" text="_Kopioi Tiedostoja..."/>
 			</menu>
+			<item id="ID_LIBRARY_FILE_REBUILD" text="Ra_kenna Uudelleen"/>
 			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Paikallista Metadata"/>
 			<item id="ID_LIBRARY_REFRESH_METADATA" text="_Refresh Metadata"/>
 			<separator/>
@@ -2465,6 +2467,7 @@
 		<tip id="ID_LIBRARY_ENQUEUE" message="Add the selected file(s) to your media playlist."/>
 		<tip id="ID_LIBRARY_EXPLORE" message="Open the selected folder(s)."/>
 		<tip id="ID_LIBRARY_EXPORT_COLLECTION" message="Export the selected album folder to collection files..."/>
+		<tip id="ID_LIBRARY_FILE_REBUILD" message="Rebuild metadata and hashes for the selected file(s)."/>
 		<tip id="ID_LIBRARY_FOLDER_DELETE" message="Delete the selected album folder."/>
 		<tip id="ID_LIBRARY_FOLDER_DOWNLOAD" message="Download all files in the selected collection."/>
 		<tip id="ID_LIBRARY_FOLDER_ENQUEUE" message="Add every file in the selected album folder(s) to your playlist."/>
