--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -1289,6 +1289,7 @@
 				<item id="ID_LIBRARY_MOVE" text="_Skuif Lêers..."/>
 				<item id="ID_LIBRARY_COPY" text="_Kopieer Lêers..."/>
 			</menu>
+			<item id="ID_LIBRARY_FILE_REBUILD" text="_Herbou"/>
 			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Lokaliseer Metadata"/>
 			<item id="ID_LIBRARY_REFRESH_METADATA" text="_Refresh Metadata"/>
 			<separator/>
@@ -1364,6 +1365,7 @@
 				<item id="ID_LIBRARY_MOVE" text="_Skuif Lêers..."/>
 				<item id="ID_LIBRARY_COPY" text="_Kopieer Lêers..."/>
 			</menu>
+			<item id="ID_LIBRARY_FILE_REBUILD" text="_Herbou"/>
 			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Lokaliseer Metadata"/>
 			<item id="ID_LIBRARY_REFRESH_METADATA" text="_Refresh Metadata"/>
 			<separator/>
@@ -2472,6 +2474,7 @@
 		<tip id="ID_LIBRARY_ENQUEUE" message="Voeg die geselekteerde lêer(s) by jou medialys."/>
 		<tip id="ID_LIBRARY_EXPLORE" message="Open die geselekteerde gids(e)."/>
 		<tip id="ID_LIBRARY_EXPORT_COLLECTION" message="Voer die geselekteerde albumgids na 'n versamelingslêer uit..."/>
+		<tip id="ID_LIBRARY_FILE_REBUILD" message="Rebuild metadata and hashes for the selected file(s)."/>
 		<tip id="ID_LIBRARY_FOLDER_DELETE" message="Skrap die geselekteerde albumgids."/>
 		<tip id="ID_LIBRARY_FOLDER_DOWNLOAD" message="Laai alle lêers in die geselekteerde versameling af."/>
 		<tip id="ID_LIBRARY_FOLDER_ENQUEUE" message="Voeg al die lêers in die geselekteerde albumgidse(s) by jou medialys."/>
