--- a/Languages/default-ar.xml
+++ b/Languages/default-ar.xml
@@ -1289,6 +1289,7 @@
 				<item id="ID_LIBRARY_MOVE" text="_نقل ملفات..."/>
 				<item id="ID_LIBRARY_COPY" text="_نسخ ملفات..."/>
 			</menu>
+			<item id="ID_LIBRARY_FILE_REBUILD" text="إع_ادة بناء"/>
 			<item id="ID_LIBRARY_REBUILD_ANSI" text="_توطين ملف تعريف"/>
 			<item id="ID_LIBRARY_REFRESH_METADATA" text="تحديث ملف التعر_يف"/>
 			<separator/>
@@ -1364,6 +1365,7 @@
 				<item id="ID_LIBRARY_MOVE" text="_نقل ملفات..."/>
 				<item id="ID_LIBRARY_COPY" text="_نسخ ملفات..."/>
 			</menu>
+			<item id="ID_LIBRARY_FILE_REBUILD" text="إع_ادة بناء"/>
 			<item id="ID_LIBRARY_REBUILD_ANSI" text="_توطين ملف تعريف"/>
 			<item id="ID_LIBRARY_REFRESH_METADATA" text="تحديث ملف التعر_يف"/>
 			<separator/>
@@ -2465,6 +2467,7 @@
 		<tip id="ID_LIBRARY_ENQUEUE" message="إضافة ملف(ات) محددة إلى قائمة تشغيل الوسائط"/>
 		<tip id="ID_LIBRARY_EXPLORE" message="فتح المجلد(ات) المحدد"/>
 		<tip id="ID_LIBRARY_EXPORT_COLLECTION" message="تصدير مجلد الألبوم المحدد إلى ملفات المجموعة..."/>
+		<tip id="ID_LIBRARY_FILE_REBUILD" message="Rebuild metadata and hashes for the selected file(s)."/>
 		<tip id="ID_LIBRARY_FOLDER_DELETE" message="حذف مجلد الألبوم المحدد"/>
 		<tip id="ID_LIBRARY_FOLDER_DOWNLOAD" message="تحميل كافة الملفات في المجموعة المحددة"/>
 		<tip id="ID_LIBRARY_FOLDER_ENQUEUE" message="إضافة كل ملف في مجلد/ات الألبوم المحددة إلى قائمة التشغيل الخاصة بك"/>
