--- a/Languages/default-hu.xml
+++ b/Languages/default-hu.xml
@@ -1289,6 +1289,7 @@
 				<item id="ID_LIBRARY_MOVE" text="Fájl _mozgatása..."/>
 				<item id="ID_LIBRARY_COPY" text="Fájlok má_solása..."/>
 			</menu>
+			<item id="ID_LIBRARY_FILE_REBUILD" text="Ú_jraépít"/>
 			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Metaadat javítása"/>
 			<item id="ID_LIBRARY_REFRESH_METADATA" text="Metaadat f_rissítése"/>
 			<separator/>
@@ -1364,6 +1365,7 @@
 				<item id="ID_LIBRARY_MOVE" text="Fájl _mozgatása..."/>
 				<item id="ID_LIBRARY_COPY" text="Fájlok má_solása..."/>
 			</menu>
+			<item id="ID_LIBRARY_FILE_REBUILD" text="Ú_jraépít"/>
 			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Metaadat javítása"/>
 			<item id="ID_LIBRARY_REFRESH_METADATA" text="Metaadat f_rissítése"/>
 			<separator/>
@@ -2441,6 +2443,7 @@
 		<tip id="ID_LIBRARY_ENQUEUE" message="A kiválasztott fájl(ok) hozzáadása a lejátszólistához."/>
 		<tip id="ID_LIBRARY_EXPLORE" message="Megnyitja a kiválasztott mappá(k)at."/>
 		<tip id="ID_LIBRARY_EXPORT_COLLECTION" message="Az albummappák, mint gyűjteményfájl exportálása..."/>
+		<tip id="ID_LIBRARY_FILE_REBUILD" message="Rebuild metadata and hashes for the selected file(s)."/>
 		<tip id="ID_LIBRARY_FOLDER_DELETE" message="Törli a kiválasztott mappát."/>
 		<tip id="ID_LIBRARY_FOLDER_DOWNLOAD" message="Minden fájl letöltése a gyűjteményben."/>
 		<tip id="ID_LIBRARY_FOLDER_ENQUEUE" message="Minden fájl hozzáadása a lejátszólistához."/>
