--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -1289,6 +1289,7 @@
 				<item id="ID_LIBRARY_MOVE" text="Bestanden ver_plaatsen..."/>
 				<item id="ID_LIBRARY_COPY" text="Bestanden _kopiëren..."/>
 			</menu>
+			<item id="ID_LIBRARY_FILE_REBUILD" text="_Herbouwen"/>
 			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Lokaliseer metadata"/>
 			<item id="ID_LIBRARY_REFRESH_METADATA" text="_Refresh metadata"/>
 			<separator/>
@@ -1364,6 +1365,7 @@
 				<item id="ID_LIBRARY_MOVE" text="Bestanden ver_plaatsen..."/>
 				<item id="ID_LIBRARY_COPY" text="Bestanden _kopiëren..."/>
 			</menu>
+			<item id="ID_LIBRARY_FILE_REBUILD" text="_Herbouwen"/>
 			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Lokaliseer metadata"/>
 			<item id="ID_LIBRARY_REFRESH_METADATA" text="_Refresh metadata"/>
 			<separator/>
@@ -2467,6 +2469,7 @@
 		<tip id="ID_LIBRARY_ENQUEUE" message="Voeg de geselecteerde bestanden toe aan je afspeellijst."/>
 		<tip id="ID_LIBRARY_EXPLORE" message="De geselecteerde mappen openen."/>
 		<tip id="ID_LIBRARY_EXPORT_COLLECTION" message="Exporteer de geselecteerde albummap naar een collectie bestand..."/>
+		<tip id="ID_LIBRARY_FILE_REBUILD" message="Rebuild metadata and hashes for the selected file(s)."/>
 		<tip id="ID_LIBRARY_FOLDER_DELETE" message="Verwijder het geselecteerde album."/>
 		<tip id="ID_LIBRARY_FOLDER_DOWNLOAD" message="Download alle bestanden in de geselecteerde collectie."/>
 		<tip id="ID_LIBRARY_FOLDER_ENQUEUE" message="Alle bestanden uit het geselecteerde album toevoegen aan je afspeellijst."/>
